@@ -1,4 +1,5 @@
 -- v?? --
+* UniqueTypeString<> - string class template for creating string representations that differ only in compile-type.
 * build_process v2.0.1 introduced.
 * NoInstance base class, blocking creation of instances of derived objects.
 * SignalMasker and SignalUnmasker have been implemented; it's helpfull in implementing thread-safe signal handling.
